--- a/app/views/account/users/index.html.haml
+++ b/app/views/account/users/index.html.haml
@@ -1,15 +1,12 @@
 .container
+  - if @user.errors.any?
+    .row.col-xs-12.errors
+      %ul
+        - @user.errors.full_messages.each do |message|
+          %li= message
   .row
     .col-xs-6.well
       = form_for @user, url: account_user_path(current_user.id), :html => {:class => 'edit_user'}, method: "patch" do |f|
-        - if @user.errors.any?
-          #error_explanation
-            %h2
-              = pluralize(user.errors.count, "error")
-              prohibited this task from being saved:
-            %ul
-              - @user.errors.full_messages.each do |message|
-                %li= message
         .form_group
           = f.label :email, class:'form-label required'
           = f.text_field :email, class:'form-control'
@@ -26,19 +23,11 @@
           = f.submit "Save", :class => 'btn btn-primary pull-right'
     .col-xs-5.col-xs-offset-1.well
       =form_for @user, url: account_user_path(current_user.id), :html => {:class => 'edit_user'}, method: "patch" do |f|
-        - if @user.errors.any?
-          #error_explanation
-            %h2
-              = pluralize(user.errors.count, "error")
-              prohibited this task from being saved:
-            %ul
-              - @user.errors.full_messages.each do |message|
-                %li= message
         .form-group
           = f.label :password
-          = f.text_field :password, class: 'form-control'
+          = f.password_field :password, class: 'form-control'
         .form-group
           = f.label :password_confirmation
-          = f.text_field :password_confirmation, class: 'form-control'
+          = f.password_field :password_confirmation, class: 'form-control'
         .form-group
           = f.submit 'Save', :class => "btn btn-primary pull-right"
