--- a/app/views/account/users/index.html.haml
+++ b/app/views/account/users/index.html.haml
@@ -8,26 +8,26 @@
     .col-xs-6.well
       = form_for @user, url: account_user_path(current_user.id), :html => {:class => 'edit_user'}, method: "patch" do |f|
         .form_group
-          = f.label :email, class:'form-label required'
+          = f.label :email, t('your_email'),class:'form-label'
           = f.text_field :email, class:'form-control'
 
         .form_group
-          = f.label :first_name, t('Firstname'), class:'form-label required'
+          = f.label :first_name, t('your_firstname'), class:'form-label'
           = f.text_field :first_name, class:'form-control'
 
         .form_group
-          = f.label :last_name, t('Lastname'), class:'form-label required'
+          = f.label :last_name, t('your_lastname'), class:'form-label'
           = f.text_field :last_name, class:'form-control'
 
         .form_group
-          = f.submit "Save", :class => 'btn btn-primary pull-right'
+          = f.submit t('save'), :class => 'btn btn-primary pull-right'
     .col-xs-5.col-xs-offset-1.well
       =form_for @user, url: account_user_path(current_user.id), :html => {:class => 'edit_user'}, method: "patch" do |f|
         .form-group
-          = f.label :password
+          = f.label :password, t('your_password')
           = f.password_field :password, class: 'form-control'
         .form-group
-          = f.label :password_confirmation
+          = f.label :password_confirmation, t('your_password_confirmation')
           = f.password_field :password_confirmation, class: 'form-control'
         .form-group
-          = f.submit 'Save', :class => "btn btn-primary pull-right"
+          = f.submit t('save'), :class => "btn btn-primary pull-right"
