--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,22 +10,22 @@
       <%= devise_error_messages! %>
 
       <div class="form-group">
-        <%= f.label :email %><br />
+        <%= f.label :email, t('your_email') %><br />
         <%= f.email_field :email, autofocus: true %>
       </div>
 
       <div class="form-group">
-        <%= f.label :first_name %><br />
+        <%= f.label :first_name, t('your_firstname') %><br />
         <%= f.text_field :first_name %>
       </div>
 
       <div class="form-group">
-        <%= f.label :last_name %><br />
+        <%= f.label :last_name, t('your_lastname') %><br />
         <%= f.text_field :last_name %>
       </div>
 
       <div class="form-group">
-        <%= f.label :password %>
+        <%= f.label :password, t('your_password') %>
         <% if @minimum_password_length %>
         <em>(<%= @minimum_password_length %> characters minimum)</em>
         <% end %><br />
@@ -33,7 +33,7 @@
       </div>
 
       <div class="form-group">
-        <%= f.label :password_confirmation %><br />
+        <%= f.label :password_confirmation, t('your_password_confirmation') %><br />
         <%= f.password_field :password_confirmation, autocomplete: "off" %>
       </div>
 
@@ -41,7 +41,7 @@
         <%= f.submit "Sign up", :class => "btn btn-primary pull-right" %>
       </div>
 
-      <a href="<%= user_session_path %>">Log in</a>
+      <a href="<%= user_session_path %>"><%= t('sign_in') %></a>
     <% end %>
   </div>
 </div>
