--- a/app/views/layouts/account.html.erb
+++ b/app/views/layouts/account.html.erb
@@ -22,6 +22,10 @@
     <div class="container content">
       <%= yield %>
     </div>
+
+    <footer class='footer'>
+      <%= render partial: '/shared/footer' %>
+    </footer>
   </body>
 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
